<?xml version="1.0" encoding="utf-8"?>


<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
     
<TableRow>
    
  <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/errinnerungstext" />

<EditText android:id="@+id/edittext1"
android:layout_width="fill_parent"
android:layout_height="wrap_content" />
</TableRow>

<TableRow>
  <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/straße" />

<EditText android:id="@+id/edittext2"
android:layout_width="fill_parent"
android:layout_height="wrap_content" />
</TableRow>


<TableRow>
  <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hausnummer" />

<EditText android:id="@+id/edittext3"
android:layout_width="fill_parent"
android:layout_height="wrap_content" />
</TableRow>


<TableRow>
  <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ort" />
    
<EditText android:id="@+id/edittext4"
android:layout_width="fill_parent"
android:layout_height="wrap_content" />
</TableRow>


<TableRow>
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/plz" />

<EditText android:id="@+id/edittext5"
android:layout_width="fill_parent"
android:layout_height="wrap_content" />
</TableRow>



<TableRow>

      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/land" />
      
<EditText android:id="@+id/edittext6"
android:layout_width="fill_parent"
android:layout_height="wrap_content" />
</TableRow>


<TableRow>
  <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lattidue" />

<EditText android:id="@+id/edittext7"
android:layout_width="fill_parent"
android:layout_height="wrap_content" />
</TableRow>


<TableRow>
  <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/longitude" />

<EditText android:id="@+id/edittext8"
android:layout_width="fill_parent"
android:layout_height="wrap_content" />
</TableRow>


<TableRow>
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Speichern" />
</TableRow>

<TableRow>
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Standort abfragen" />
</TableRow>


</TableLayout>
